# Preset3

./: .clang-format  CMakeLists.txt  CMakePresets.json  main.cpp
